# debian-libatomic-ops

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
debian/: README.Debian  README.source  changelog  control  control.in  copyright  docs  libatomic-malloc.3  libatomic-ops-dev.dirs  libatomic-ops-dev.docs  libatomic-ops-dev.install  libatomic-ops-dev.links  libatomic-ops-dev.manpages  libatomic-ops.3  libatomic-ops.links  libatomic-stack.3  rules  watch
debian/patches/: 0001-Basic-support-of-TILE-Gx-and-TILEPro-CPUs.patch  0001-Update-AUTHORS-file-add-Roman-Zippel.patch  0001-Use-LLD-and-SCD-instructions-on-mips64.patch  0002-Remove-inclusion-of-acquire_release_volatile.h-on-mi.patch  0002-Use-LLD-and-SCD-instructions-on-mips64.patch  0003-Minor-fix-of-code-alignment-in-mips-AO_compare_and_s.patch  0003-Support-n32-ABI-for-mips64.patch  0004-Support-n32-ABI-for-mips64.patch  0005-Fix-GCC-5.x-compatibility-for-AArch64-double-wide-pr.patch  00_x86_intrin.patch  01_s390_include.patch  04_m68k.patch  04_sh4_support.patch  05_powerpc_asm.patch  06_double.patch  07_pic_cmpxchng.patch  riscv.patch  series
doc/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  atomic_ops.h  atomic_ops_stack.c  config.h.in
src/atomic_ops/: Makefile.am  Makefile.in
src/atomic_ops/sysdeps/: Makefile.am  Makefile.in
src/atomic_ops/sysdeps/gcc/: arm.h  x86.h
tests/: Makefile.am  Makefile.in  list_atomic.c  test_atomic_include.h
