# Process this file with autoconf to produce a configure script.
AC_INIT(libatomic-ops, 0.5.1)
AC_CANONICAL_SYSTEM
AC_CONFIG_SRCDIR(src/atomic_ops.c)
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([ ])

AC_OUTPUT([Makefile src/Makefile src/atomic_ops/Makefile src/atomic_ops/sysdeps/Makefile doc/Makefile tests/Makefile])
